KItemListRoleEditor: Disable spellchecking

No need for spellchecking when renaming folders/filenames.

BUG:477897